Ignore the text in redirect pages

--- a/axoniq-vale-package/.vale.ini
+++ b/axoniq-vale-package/.vale.ini
@@ -18,3 +18,5 @@ Google.WordList = NO # Disable Google's word list
 Google.Passive=warning
 
 proselint.Diacritical = NO # disable proselint's diacritical rule
+
+TokenIgnores = (The page you requested has been relocated) # Ignore the text in redirect pages
