--- a/axoniq-vale-package/.vale.ini
+++ b/axoniq-vale-package/.vale.ini
@@ -15,7 +15,11 @@ Google.Headings = NO # Diasable in favor od AxonIQ one
 Google.Parens = NO # Disable warning about using parens
 Google.Quotes = NO # Diasable "commas and periods go inside quotation marks"
 Google.WordList = NO # Disable Google's word list
-Google.Passive=warning
+Google.Passive = NO # Allow the use of Passive voice
+Google.Colons = NO # Allow the use of Colons
+Google.will = NO # Allow use will
+Google.Contractions = NO
+Google.We = NO
 
 proselint.Diacritical = NO # disable proselint's diacritical rule
 
