--- a/axoniq-vale-package/.vale.ini
+++ b/axoniq-vale-package/.vale.ini
@@ -17,7 +17,7 @@ Google.Quotes = NO # Diasable "commas and periods go inside quotation marks"
 Google.WordList = NO # Disable Google's word list
 Google.Passive = NO # Allow the use of Passive voice
 Google.Colons = NO # Allow the use of Colons
-Google.will = NO # Allow use will
+Google.Will = NO # Allow use will
 Google.Contractions = NO
 Google.We = NO
 
