Added Docker Compose to list of exceptions in Headings Caps

--- a/axoniq-vale-package/styles/AxonIQ/Headings.yml
+++ b/axoniq-vale-package/styles/AxonIQ/Headings.yml
@@ -25,6 +25,7 @@ exceptions:
   - Command-Query Responsibility Separation
   - Cosmos
   - Docker
+  - Docker Compose
   - Domain-Driven Design
   - Emmet
   - Event Sourcing
