--- a/axoniq-vale-package/styles/AxonIQ/Headings.yml
+++ b/axoniq-vale-package/styles/AxonIQ/Headings.yml
@@ -12,20 +12,20 @@ indicators:
   - ':'
 exceptions:
   - Azure
-  - Axon
   - Axon Framework
   - Axon Server
   - Axon Synapse
-  - AxonIQ
+  - Axon
   - AxonIQ Cloud
   - AxonIQ Console
   - AxonIQ Library
+  - AxonIQ
   - CLI
-  - Code
+#  - Code
   - Command-Query Responsibility Separation
   - Cosmos
-  - Docker
   - Docker Compose
+  - Docker
   - Domain-Driven Design
   - Emmet
   - Event Sourcing
