added acronyms and Axon module names

--- a/axoniq-vale-package/styles/AxonIQ/AcronymCase.yml
+++ b/axoniq-vale-package/styles/AxonIQ/AcronymCase.yml
@@ -4,8 +4,11 @@ level: error
 ignorecase: true
 # swap maps tokens in form of bad: good
 swap:
+  amqp: AMQP
+  aot: AOT
   "[^-]api": API    # Allow api as a suffix in module names like core-api
   apis: APIs
+  cdi: CDI
   bom: BOM
   dsl: DSL
   dsls: DSLs
