Allow AxonIQ Documentation as name

--- a/axoniq-vale-package/styles/AxonIQ/Headings.yml
+++ b/axoniq-vale-package/styles/AxonIQ/Headings.yml
@@ -38,6 +38,7 @@ exceptions:
   - AxonIQ Cloud
   - AxonIQ Console
   - AxonIQ Library
+  - AxonIQ Documentation
   - CLI
   - Command-Query Responsibility Separation
   - Cosmos
