--- a/axoniq-vale-package/styles/AxonIQ/Headings.yml
+++ b/axoniq-vale-package/styles/AxonIQ/Headings.yml
@@ -77,3 +77,9 @@ exceptions:
   - Visual
   - VS
   - Windows
+  - Tenant Segment Factories
+  - TenantCommandSegmentFactory
+  - TenantQuerySegmentFactory
+  - TenantEventSegmentFactory
+  - TenantEventSchedulerSegmentFactory
+  - TenantEventProcessorControlSegmentFactory
