Add AxonIQ Playbook te Exceptions

--- a/axoniq-vale-package/styles/AxonIQ/Headings.yml
+++ b/axoniq-vale-package/styles/AxonIQ/Headings.yml
@@ -39,6 +39,7 @@ exceptions:
   - AxonIQ Console
   - AxonIQ Library
   - AxonIQ Documentation
+  - AxonIQ Playbook
   - CLI
   - Command-Query Responsibility Separation
   - Cosmos
