--- a/axoniq-vale-package/styles/AxonIQ/Headings.yml
+++ b/axoniq-vale-package/styles/AxonIQ/Headings.yml
@@ -55,6 +55,7 @@ exceptions:
   - gRPC
   - I
   - JPA
+  - JSON
   - Jackson
   - Java
   - JobRunr
@@ -89,3 +90,4 @@ exceptions:
   - VS
   - Visual
   - Windows
+  - XML
